<resources>
    <string name="defaultText" translatable="false">IsText</string>
    <string name="defaultNumber" translatable="false">16</string>
    <string name="app_name" translatable="false">Wallet</string>
    <string name="app_info" translatable="false">Expenses tracker</string>
    <string name="copyright" translatable="false">Copyright © %1$d.</string>
    <string name="navigation_Drawer_Open" translatable="false">Open navigation drawer</string>
    <string name="navigation_Drawer_Close" translatable="false">Close navigation drawer</string>
    <string name="nav_Header_Description" translatable="false">Navigation header</string>
    <string name="percentage" translatable="false">%1$s%%</string>
    <string name="bar" translatable="false">/ %1$s</string>
    <string name="number_days">%1$d days</string>
    <string name="negate" translatable="false">- %1$s</string>
    <string name="menu_Home">Home</string>
    <string name="menu_Records">Records</string>
    <string name="menu_Statistics">Statistics</string>
    <string name="menu_PlannedPayments">Planned Payments</string>
    <string name="menu_Debts">Debts</string>
    <string name="menu_Goals">Goals</string>
    <string name="menu_ShoppingLists">Shopping Lists</string>
    <string name="menu_Stores">Stores</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Imports">Imports</string>
    <string name="title_Home">Home</string>
    <string name="title_Records">Records</string>
    <string name="title_Statistics">Statistics</string>
    <string name="title_PlannedPayments">Planned payments</string>
    <string name="title_Debts">Debts</string>
    <string name="title_Goals">Goals</string>
    <string name="title_GoalsDetails">Goal details</string>
    <string name="title_ShoppingLists">Shopping lists</string>
    <string name="title_ShoppingList_Items">Shopping list items</string>
    <string name="title_Stores">Stores</string>
    <string name="title_Accounts">Accounts</string>
    <string name="title_Imports">Imports</string>
    <string name="title_About">About</string>
    <string name="title_Icons">Icons</string>
    <string name="title_Categories">Categories</string>
    <string name="title_Currencies">Currencies</string>
    <string name="title_Templates">Templates</string>
    <string name="title_addChange_record">€ 0.00</string>
    <string name="title_addChange_record_value">%1$s %2$.2f</string>
    <string name="title_add_recordBasic">Add record</string>
    <string name="title_add_account">New account</string>
    <string name="title_add_category">New category</string>
    <string name="title_add_currency">New currency</string>
    <string name="title_add_debt_lent">I lent</string>
    <string name="title_add_debt_lent_extend">I lent to %1$s</string>
    <string name="title_add_debt_borrowed">I borrowed</string>
    <string name="title_add_debt_borrowed_extend">I borrowed from %1$s</string>
    <string name="title_add_goal_select">Choose goal</string>
    <string name="title_add_goal">New goal</string>
    <string name="title_add_planned_payment">New planned payment</string>
    <string name="title_add_shopping_list">New shopping list</string>
    <string name="title_add_store">New store</string>
    <string name="title_add_template">New template</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_category">Edit category</string>
    <string name="title_edit_currency">Edit currency</string>
    <string name="title_edit_debt">Edit debt</string>
    <string name="title_edit_goal">Edit goal</string>
    <string name="title_edit_planned_payment">Edit planned payment</string>
    <string name="title_edit_shopping_list">Edit shopping list</string>
    <string name="title_edit_store">Edit store</string>
    <string name="title_edit_template">Edit template</string>
    <string name="title_edit_user_profile">Update user profile</string>
    <string name="cardviewButtonText_showMore">Show more</string>
    <string name="cardviewButtonText_PlannedPayments">Add planned payment</string>
    <string name="cardviewButtonText_ShoppingLists">Add item</string>
    <string name="cardViewButtonText_Debts">Add debt</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="both">Both</string>
    <string name="lent">I lent</string>
    <string name="borrowed">I borrowed</string>
    <string name="pastPeriod">vs past period</string>
    <string name="filter">Filter</string>
    <string name="reorderableMenu">Move item</string>
    <string name="menuResources_Title_Edit">Edit</string>
    <string name="menuResources_Title_Save">Save</string>
    <string name="menuResources_Title_Delete">Delete</string>
    <string name="menuResources_Title_Filter">Filter</string>
    <string name="menuResources_Title_Sort">Sort</string>
    <string name="menuResources_Title_Search">Search</string>
    <string name="menuResources_Title_Options">Other options</string>
    <string name="menuResources_Title_Reminder">Reminder</string>
    <string name="menuResources_Title_CreateRecord">Create record</string>
    <string name="menuResources_Title_Rename">Rename</string>
    <string name="menuResources_Title_DeleteList">Delete list</string>
    <string name="menuResources_Title_Pause">Pause</string>
    <string name="menuResources_Title_Activate">Activate</string>
    <string name="home_Tab1">Home</string>
    <string name="home_Tab2">Information</string>
    <string name="home_cardTitle_Accounts">Current accounts</string>
    <string name="home_cardTitle_Balance">Balance</string>
    <string name="home_cardTitle_Cashflow">Cash flow</string>
    <string name="home_cardTitle_Records">Last records</string>
    <string name="home_cardAccounts_Today">Today</string>
    <string name="home_RecordsButton">Records</string>
    <string name="home_Information_Header1">Upcoming</string>
    <string name="home_Information_Header2">Debts</string>
    <string name="home_Information_Header3">Shopping lists</string>
    <string name="home_showAllAccounts">All accounts</string>
    <string name="home_FAB_newRecord">New record</string>
    <string name="home_FAB_transfer">Transfer</string>
    <string name="home_FAB_template">Template: %1$s</string>
    <string name="debts_Tab1">@string/lent</string>
    <string name="debts_Tab2">@string/borrowed</string>
    <string name="imports_Entire" >Entire app</string>
    <string name="imports_NewAccount" >Create new account</string>
    <string name="imports_Import" >Import</string>
    <string name="developers" >Developers</string>
    <string name="authors" >Authors</string>
    <string name="shoppingLists_Estimate">Estimate</string>
    <string name="shoppingLists_nrOfItems">%1$d items</string>
    <string name="goals_Saved" >Saved: %1$d</string>
    <string name="goals_Goal" >Goal: %1$d</string>
    <string name="goals_Tab1" >Active</string>
    <string name="goals_Tab2" >Paused</string>
    <string name="goals_Tab3" >Reached</string>
    <string name="goals_Details_Description">Goal details</string>
    <string name="goals_Details_LastAdded">Last added week amount</string>
    <string name="goals_Details_Estimated">Estimated time to reach goal</string>
    <string name="goals_Details_EstimatedPeriod">%1$d days</string>
    <string name="goals_Details_AddAmount">Add saved amount</string>
    <string name="goals_Details_AddAmount_error">Cannot add an amount when goal is paused.</string>
    <string name="goals_Details_SetReached">Set goal as reached</string>
    <string name="slider_Period_Type1_Item1" >7 days</string>
    <string name="slider_Period_Type1_Item2" >30 days</string>
    <string name="slider_Period_Type1_Item3" >6 months</string>
    <string name="slider_Period_Type1_Item4" >1 year</string>
    <string name="slider_Period_Type2" >%1$s - Today</string>
    <string name="slider_Period_Type3_DateStart" >%1$s</string>
    <string name="slider_Period_Type3_Mark" >&#8211;</string>
    <string name="slider_Period_Type3_DateEnd" >%1$s</string>
    <string name="debts_list_Name_Lent">%1$s owes me</string>
    <string name="debts_list_Name_Borrowed">I owe %1$s</string>
    <string name="debts_list_Description">Debt</string>
    <string name="debts_list_createRecord">Create record</string>
    <string name="statistics_Tab1">Balance</string>
    <string name="statistics_Tab2">Cash-flow</string>
    <string name="statistics_Tab3">Spending</string>
    <string name="statistics_Tab4">Reports</string>
    <string name="statistics_cardTitle_Balance">Balance by accounts</string>
    <string name="statistics_cardTitle_Currencies">Balance by currencies</string>
    <string name="statistics_cardTitle_Cashflow">Cash flow</string>
    <string name="statistics_cardTitle_TableCashflow">Cash-flow table</string>
    <string name="statistics_cardTitle_SpendingExpenses">Top 5 expenses</string>
    <string name="statistics_cardTitle_SpendingCategories">Top categories</string>
    <string name="statistics_cardTitle_Saldi">Income &amp; expenses book in EUR</string>
    <string name="statistics_cardSubtitle_Balance">In which accounts do I have most of my money?</string>
    <string name="statistics_cardSubtitle_Currencies">How much do I have spend in foreign currencies?</string>
    <string name="statistics_cardSubtitle_Cashflow">Am I spending less than I make?</string>
    <string name="statistics_cardSubtitle_TableCashflow">What are the numbers of my wallet?</string>
    <string name="statistics_cardSubtitle_SpendingExpenses">What were my biggest expenses?</string>
    <string name="statistics_cardSubtitle_SpendingCategories">In which categories have I spend most of my money?</string>
    <string name="statistics_cardSubtitle_Saldi">In which categories have I created records?</string>
    <string name="statistics_Cashflow_TableHead">Quick overview</string>
    <string name="statistics_Cashflow_TableCount">Count</string>
    <string name="statistics_Cashflow_TableAvgDay">Average (day)</string>
    <string name="statistics_Cashflow_TableAvgRecord">Average (record)</string>
    <string name="statistics_Cashflow_TableTotal">Total</string>
    <string name="data_Template_Name" >Name</string>
    <string name="data_Template_Amount" >Amount</string>
    <string name="data_Template_Currency" >Currency</string>
    <string name="data_Template_Account" >Account</string>
    <string name="data_Template_Category" >Category</string>
    <string name="data_Template_Type" >Type</string>
    <string name="data_Template_Paytype" >Payment type</string>
    <string name="data_Template_Store" >Store</string>
    <string name="data_Template_Payee" >Payee</string>
    <string name="data_Template_Note" >Note</string>
    <string name="data_Template_ErrorMsg_empty">Name can\'t be empty.</string>
    <string name="data_Goal_Select_HintName" >Your goal"'"s name</string>
    <string name="data_Goal_Select_Title" >What are you saving for?</string>
    <string name="data_Goal_Select_Create" >Create goal</string>
    <string name="data_Goal_Select_Header" >Some things people save for:</string>
    <string name="data_Goal_Name">Name</string>
    <string name="data_ShoppingList_Title" >Name your list</string>
    <string name="data_ShoppingList_Name" >Name</string>
    <string name="data_ShoppingList_Category" >Category</string>
    <string name="data_ShoppingList_Store" >Store</string>
    <string name="data_ShoppingList_Create" >Create list</string>
    <string name="dialog_Sort_Title">Sorting</string>
    <string name="dialog_Sort_Item1">By name: A to Z</string>
    <string name="dialog_Sort_Item2">By name: Z to A</string>
    <string name="dialog_Sort_Item3">By date: newest</string>
    <string name="dialog_Sort_Item4">By date: oldest</string>
    <string name="dialog_default">Default</string>
</resources>