<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuLayout_GoalMoreOptions_pause"
        android:title="@string/menuResources_Title_Pause"
        android:titleCondensed="@string/menuResources_Title_Pause"
        android:icon="@drawable/pause"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/menuLayout_GoalMoreOptions_start"
        android:title="@string/menuResources_Title_Activate"
        android:titleCondensed="@string/menuResources_Title_Activate"
        android:icon="@drawable/play"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/menuLayout_GoalMoreOptions_Delete"
        android:title="@string/menuResources_Title_Delete"
        android:titleCondensed="@string/menuResources_Title_Delete"
        android:icon="@drawable/delete"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/menuLayout_GoalMoreOptions_Save"
        android:title="@string/menuResources_Title_Save"
        android:titleCondensed="@string/menuResources_Title_Save"
        android:icon="@drawable/check"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:visible="false"/>

    <item android:id="@+id/menuLayout_GoalMoreOptions_Edit"
        android:title="@string/menuResources_Title_Edit"
        android:titleCondensed="@string/menuResources_Title_Edit"
        android:icon="@drawable/edit"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>