<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <TextView
        android:id="@+id/data_Card_GoalSelect_Title"
        android:text="@string/data_Goal_Select_Title"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        style="@style/Text_Title" />

    <TextView
        android:id="@+id/data_Card_GoalSelect_NameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_Card_GoalSelect_Title"
        android:textColor="@color/colorAccent"
        android:text="@string/data_Goal_Name" />

    <EditText
        android:id="@+id/data_Card_GoalSelect_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_Card_GoalSelect_NameView"
        android:ems="10"
        android:hint="@string/data_Goal_Select_HintName"
        android:backgroundTint="@color/colorAccent"
        android:inputType="textNoSuggestions"
        android:autofillHints="@string/data_Goal_Name"/>

    <Button
        android:id="@+id/data_Card_GoalSelect_Create"
        android:layout_below="@id/data_Card_GoalSelect_Name"
        android:text="@string/data_Goal_Select_Create"
        android:layout_marginTop="5dp"
        style="@style/Button_Add"/>

    <TextView
        android:id="@+id/data_Card_GoalSelect_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_Card_GoalSelect_Create"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/data_Goal_Select_Header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data_Card_GoalSelect_Grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/data_Card_GoalSelect_Header"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:scrollbars="none"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/list_goal_prefab"/>
</RelativeLayout>